--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "url": "https://github.com/mzonghao/antd-tablex/issues"
   },
   "homepage": "https://github.com/mzonghao/antd-tablex#readme",
-  "main": "es/index.js",
+  "main": "lib/index.js",
   "module": "es/index.js",
   "pre-commit": [
     "lint"
   ],
   "scripts": {
-    "lint": "./node_modules/.bin/eslint es/*",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "./node_modules/.bin/babel es --out-dir lib",
+    "lint": "./node_modules/.bin/eslint es/*"
   },
   "dependencies": {
     "antd": "^3.10.4",
@@ -38,8 +38,12 @@
     "react-dom": "^16.4.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
