--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,13 @@
-*.iml
-.idea/
-.ipr
-.iws
-*~
-~*
-*.diff
-*.patch
-*.bak
+.idea
 .DS_Store
 Thumbs.db
-.*proj
-.svn/
-*.swp
-*.swo
-*.log
-*.log.*
-*.json.gzip
-node_modules/
-.buildpath
-.settings
+
+# npm
 npm-debug.log
-nohup.out
-_site
-_data
-elasticsearch-*
-config/base.yaml
-/.vscode/
-/coverage
+node_modules
 yarn.lock
 package-lock.json
-!components/**/__tests__/*.js
-!components/**/__tests__/*.js.snap
-/.history
+
+# build
+es/
+cjs/
