--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,15 @@
 {
   "presets": [
-    "es2015",
+    [
+      "es2015",
+      {
+        "modules": false
+      }
+    ],
     "stage-0",
     "react"
+  ],
+  "plugins": [
+    "external-helpers"
   ]
 }
