--- a/package.json
+++ b/package.json
@@ -19,28 +19,28 @@
     "url": "https://github.com/mzonghao/antd-tablex/issues"
   },
   "homepage": "https://github.com/mzonghao/antd-tablex#readme",
-  "main": "lib/index.js",
+  "main": "cjs/index.js",
   "module": "es/index.js",
   "pre-commit": [
     "lint"
   ],
   "scripts": {
-    "compile": "./node_modules/.bin/babel es --out-dir lib",
-    "lint": "./node_modules/.bin/eslint es/*"
+    "build": "node build",
+    "compile": "./node_modules/.bin/babel src --out-dir lib",
+    "lint": "./node_modules/.bin/eslint src/* build/*"
   },
   "dependencies": {
     "antd": "^3.10.4",
     "localforage": "^1.7.3",
     "lodash": "^4.17.11",
-    "moment": "^2.22.2",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "moment": "^2.22.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -49,6 +49,22 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "pre-commit": "^1.2.2"
+    "pre-commit": "^1.2.2",
+    "rollup": "^0.67.1",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^1.6.2"
+  },
+  "files": [
+    "es",
+    "cjs"
+  ],
+  "peerDependencies": {
+    "antd": "^3.10.4",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   }
 }
