--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-import": "^1.11.0",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
