--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
     "cjs"
   ],
   "peerDependencies": {
-    "antd": "^3.10.4",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "antd": ">=3.0.0",
+    "prop-types": ">=15.5.7",
+    "react": ">=16.0.0",
+    "react-dom": ">=16.0.0"
   }
 }
