--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "antd-tablex",
   "version": "0.8.9",
-  "description": "An powerful table and antd-based implementation",
+  "description": "An powerful search table and antd-based implementation",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mzonghao/antd-tablex.git"
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/mzonghao/antd-tablex#readme",
   "main": "lib/index.cjs.js",
-  "module": "src/index.js",
+  "module": "lib/index.es.js",
   "pre-commit": [
     "lint"
   ],
